Closed
Bug 1685153
Opened 4 years ago
Closed 4 years ago
crash near null in [@ nsTextControlFrame::ScrollSelectionIntoViewAsync]
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | wontfix |
| firefox86 | --- | fixed |
People
(Reporter: tsmith, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Attachments
(1 file)
The test case becomes unreliable as it reduces.
==792==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000018 (pc 0x7f608d0c90af bp 0x7ffe66d50470 sp 0x7ffe66d50460 T0)
==792==The signal is caused by a READ memory access.
==792==Hint: address points to the zero page.
#0 0x7f608d0c90af in get /builds/worker/workspace/obj-build/dist/include/nsCOMPtr.h:851:48
#1 0x7f608d0c90af in operator nsIContent * /builds/worker/workspace/obj-build/dist/include/nsCOMPtr.h:859:33
#2 0x7f608d0c90af in GetContent /gecko/layout/generic/nsIFrame.h:845:43
#3 0x7f608d0c90af in nsTextControlFrame::ScrollSelectionIntoViewAsync(nsTextControlFrame::ScrollAncestors) /gecko/layout/forms/nsTextControlFrame.cpp:826:59
#4 0x7f608a53a034 in mozilla::TextControlState::SetSelectionRange(unsigned int, unsigned int, nsITextControlFrame::SelectionDirection, mozilla::ErrorResult&, mozilla::TextControlState::ScrollAfterSelection) /gecko/dom/html/TextControlState.cpp:2100:20
#5 0x7f608a50e24b in mozilla::TextControlState::SetSelectionEnd(mozilla::dom::Nullable<unsigned int> const&, mozilla::ErrorResult&) /gecko/dom/html/TextControlState.cpp:2179:3
#6 0x7f60899a2103 in mozilla::dom::HTMLTextAreaElement_Binding::set_selectionEnd(JSContext*, JS::Handle<JSObject*>, void*, JSJitSetterCallArgs) /builds/worker/workspace/obj-build/dom/bindings/HTMLTextAreaElementBinding.cpp:1723:24
#7 0x7f6089a08551 in bool mozilla::dom::binding_detail::GenericSetter<mozilla::dom::binding_detail::NormalThisPolicy>(JSContext*, unsigned int, JS::Value*) /gecko/dom/bindings/BindingUtils.cpp:3179:8
#8 0x7f60905b8f66 in CallJSNative /gecko/js/src/vm/Interpreter.cpp:503:13
#9 0x7f60905b8f66 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:594:12
#10 0x7f60905bae0e in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:647:10
#11 0x7f60905bb190 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:664:8
#12 0x7f60905bceeb in js::CallSetter(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::Handle<JS::Value>) /gecko/js/src/vm/Interpreter.cpp:802:10
#13 0x7f6090b3657b in SetExistingProperty(JSContext*, JS::Handle<JS::PropertyKey>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::Handle<js::NativeObject*>, JS::Handle<JS::PropertyResult>, JS::ObjectOpResult&) /gecko/js/src/vm/NativeObject.cpp:2653:8
#14 0x7f6090b359c9 in bool js::NativeSetProperty<(js::QualifiedBool)1>(JSContext*, JS::Handle<js::NativeObject*>, JS::Handle<JS::PropertyKey>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&) /gecko/js/src/vm/NativeObject.cpp:2682:14
#15 0x7f60905cf990 in js::SetProperty(JSContext*, JS::Handle<JSObject*>, JS::Handle<JS::PropertyKey>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&) /gecko/js/src/vm/ObjectOperations-inl.h:282:10
#16 0x7f609059aff3 in SetPropertyOperation /gecko/js/src/vm/Interpreter.cpp:272:10
#17 0x7f609059aff3 in Interpret(JSContext*, js::RunState&) /gecko/js/src/vm/Interpreter.cpp:3074:12
#18 0x7f609058428b in js::RunScript(JSContext*, js::RunState&) /gecko/js/src/vm/Interpreter.cpp:473:13
#19 0x7f60905b8d69 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:619:13
#20 0x7f60905bae0e in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:647:10
#21 0x7f60905bb190 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /gecko/js/src/vm/Interpreter.cpp:664:8
#22 0x7f6090edcac2 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /gecko/js/src/jsapi.cpp:2861:10
#23 0x7f608960c469 in mozilla::dom::EventHandlerNonNull::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/EventHandlerBinding.cpp:279:37
#24 0x7f608a1e1fd1 in void mozilla::dom::EventHandlerNonNull::Call<nsCOMPtr<mozilla::dom::EventTarget> >(nsCOMPtr<mozilla::dom::EventTarget> const&, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/EventHandlerBinding.h:366:12
#25 0x7f608a1e0192 in mozilla::JSEventHandler::HandleEvent(mozilla::dom::Event*) /gecko/dom/events/JSEventHandler.cpp:201:12
#26 0x7f608a1a2394 in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) /gecko/dom/events/EventListenerManager.cpp:1095:22
#27 0x7f608a1a3b49 in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) /gecko/dom/events/EventListenerManager.cpp:1286:17
#28 0x7f608a19152e in mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) /gecko/dom/events/EventDispatcher.cpp:352:17
#29 0x7f608a18fd33 in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /gecko/dom/events/EventDispatcher.cpp:554:16
#30 0x7f608a194190 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /gecko/dom/events/EventDispatcher.cpp:1089:11
#31 0x7f608cc678c0 in nsDocumentViewer::LoadComplete(nsresult) /gecko/layout/base/nsDocumentViewer.cpp:1097:7
#32 0x7f608f8b6a55 in nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult) /gecko/docshell/base/nsDocShell.cpp:6395:20
#33 0x7f608f8b5d80 in nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /gecko/docshell/base/nsDocShell.cpp:5748:7
#34 0x7f608f8b7dff in non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /gecko/docshell/base/nsDocShell.cpp
#35 0x7f60867df126 in nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) /gecko/uriloader/base/nsDocLoader.cpp:1348:3
#36 0x7f60867ddea5 in nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) /gecko/uriloader/base/nsDocLoader.cpp:954:14
#37 0x7f60867d9eb0 in nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&) /gecko/uriloader/base/nsDocLoader.cpp:757:9
#38 0x7f60867dc8e1 in nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /gecko/uriloader/base/nsDocLoader.cpp:640:5
#39 0x7f60867dda4c in non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /gecko/uriloader/base/nsDocLoader.cpp
#40 0x7f60847e7417 in mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult) /gecko/netwerk/base/nsLoadGroup.cpp:616:22
#41 0x7f60847ea593 in mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) /gecko/netwerk/base/nsLoadGroup.cpp:523:10
#42 0x7f6087793f80 in imgRequestProxy::RemoveFromLoadGroup() /gecko/image/imgRequestProxy.cpp:370:15
#43 0x7f608779d5e8 in imgRequestProxy::OnLoadComplete(bool) /gecko/image/imgRequestProxy.cpp:1003:7
#44 0x7f608775c950 in operator() /gecko/image/ProgressTracker.cpp:351:13
#45 0x7f608775c950 in void mozilla::image::ImageObserverNotifier<mozilla::image::ObserverTable const*>::operator()<void mozilla::image::SyncNotifyInternal<mozilla::image::ObserverTable const*>(mozilla::image::ObserverTable const* const&, bool, unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&)::'lambda5'(mozilla::image::IProgressObserver*)>(mozilla::image::ObserverTable const*) /gecko/image/ProgressTracker.cpp:281:9
#46 0x7f608775a1f9 in void mozilla::image::SyncNotifyInternal<mozilla::image::ObserverTable const*>(mozilla::image::ObserverTable const* const&, bool, unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&) /gecko/image/ProgressTracker.cpp:350:5
#47 0x7f60876ef1c3 in operator() /gecko/image/ProgressTracker.cpp:369:5
#48 0x7f60876ef1c3 in Read<(lambda at src/image/ProgressTracker.cpp:368:19)> /gecko/image/CopyOnWrite.h:155:12
#49 0x7f60876ef1c3 in mozilla::image::ProgressTracker::SyncNotifyProgress(unsigned int, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&) /gecko/image/ProgressTracker.cpp:368:14
#50 0x7f60876fd32b in mozilla::image::RasterImage::NotifyProgress(unsigned int, mozilla::gfx::IntRectTyped<mozilla::UnorientedPixel> const&, mozilla::Maybe<unsigned int> const&, mozilla::image::DecoderFlags, mozilla::image::SurfaceFlags) /gecko/image/RasterImage.cpp:1683:28
#51 0x7f608770ab8e in NotifyForLoadEvent /gecko/image/RasterImage.cpp:977:3
#52 0x7f608770ab8e in mozilla::image::RasterImage::OnImageDataComplete(nsIRequest*, nsISupports*, nsresult, bool) /gecko/image/RasterImage.cpp:959:3
#53 0x7f608778c8cb in imgRequest::OnStopRequest(nsIRequest*, nsresult) /gecko/image/imgRequest.cpp:785:16
#54 0x7f6086663d16 in nsJARChannel::OnStopRequest(nsIRequest*, nsresult) /gecko/modules/libjar/nsJARChannel.cpp:1074:16
#55 0x7f60866678fc in non-virtual thunk to nsJARChannel::OnStopRequest(nsIRequest*, nsresult) /gecko/modules/libjar/nsJARChannel.cpp
#56 0x7f60847e309b in nsInputStreamPump::OnStateStop() /gecko/netwerk/base/nsInputStreamPump.cpp:649:16
#57 0x7f60847e164a in nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream*) /gecko/netwerk/base/nsInputStreamPump.cpp:397:21
#58 0x7f60844568b6 in nsInputStreamReadyEvent::Run() /gecko/xpcom/io/nsStreamUtils.cpp:94:20
#59 0x7f60844cac19 in mozilla::RunnableTask::Run() /gecko/xpcom/threads/TaskController.cpp:459:16
#60 0x7f60844c7617 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /gecko/xpcom/threads/TaskController.cpp:739:26
#61 0x7f60844c5557 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /gecko/xpcom/threads/TaskController.cpp:598:15
#62 0x7f60844c59ad in mozilla::TaskController::ProcessPendingMTTask(bool) /gecko/xpcom/threads/TaskController.cpp:382:36
#63 0x7f60844d2791 in operator() /gecko/xpcom/threads/TaskController.cpp:123:37
#64 0x7f60844d2791 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_3>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:534:5
#65 0x7f60844f2ced in nsThread::ProcessNextEvent(bool, bool*) /gecko/xpcom/threads/nsThread.cpp:1200:14
#66 0x7f60844fe04c in NS_ProcessNextEvent(nsIThread*, bool) /gecko/xpcom/threads/nsThreadUtils.cpp:548:10
#67 0x7f60857fbbaf in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /gecko/ipc/glue/MessagePump.cpp:87:21
#68 0x7f60856f2411 in RunInternal /gecko/ipc/chromium/src/base/message_loop.cc:334:10
#69 0x7f60856f2411 in RunHandler /gecko/ipc/chromium/src/base/message_loop.cc:327:3
#70 0x7f60856f2411 in MessageLoop::Run() /gecko/ipc/chromium/src/base/message_loop.cc:309:3
#71 0x7f608c619977 in nsBaseAppShell::Run() /gecko/widget/nsBaseAppShell.cpp:137:27
#72 0x7f609035179f in XRE_RunAppShell() /gecko/toolkit/xre/nsEmbedFunctions.cpp:902:20
#73 0x7f60856f2411 in RunInternal /gecko/ipc/chromium/src/base/message_loop.cc:334:10
#74 0x7f60856f2411 in RunHandler /gecko/ipc/chromium/src/base/message_loop.cc:327:3
#75 0x7f60856f2411 in MessageLoop::Run() /gecko/ipc/chromium/src/base/message_loop.cc:309:3
#76 0x7f6090350d3c in XRE_InitChildProcess(int, char**, XREChildData const*) /gecko/toolkit/xre/nsEmbedFunctions.cpp:733:34
#77 0x55ade95f3bdd in content_process_main(mozilla::Bootstrap*, int, char**) /gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
#78 0x55ade95f4017 in main /gecko/browser/app/nsBrowserApp.cpp:305:18
#79 0x7f60a4c5f0b2 in __libc_start_main /build/glibc-ZN95T4/glibc-2.31/csu/../csu/libc-start.c:308:16
#80 0x55ade9547579 in _start (/home/worker/builds/m-c-20201219214357-fuzzing-asan-opt/firefox+0x5a579)
| Reporter | ||
Comment 1•4 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/JQcUsgskKmlp8ASrNTBZ9g/index.html
Comment 2•4 years ago
|
||
Sad. I cannot open the link on the Firefox dev edition for now. On the release version, it loaded pretty slow...
Updated•4 years ago
|
Severity: -- → S3
Comment 3•4 years ago
|
||
cc Emilio beacuse nsTextControlFrame::ScrollSelectionIntoViewAsync was updated recently by Emilio.
| Assignee | ||
Comment 4•4 years ago
|
||
SetSelectionRange may kill the frame (in the test-case, AccessibleCaret
flushes layout).
No crashtest as there doesn't seem to be one available.
Updated•4 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c596c6c38008
Null check mBoundFrame before scrolling to it. r=masayuki
Comment 6•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Updated•4 years ago
|
status-firefox84:
--- → unaffected
status-firefox85:
--- → wontfix
status-firefox-esr78:
--- → unaffected
Flags: in-testsuite-
Updated•4 years ago
|
Has Regression Range: --- → yes
Updated•4 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•