Bug 1685153 - Null check mBoundFrame before scrolling to it. r=masayuki

SetSelectionRange may kill the frame (in the test-case, AccessibleCaret
flushes layout).

No crashtest as there doesn't seem to be one available.

Differential Revision: https://phabricator.services.mozilla.com/D101253